--- a/index.html
+++ b/index.html
@@ -3,16 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>trabalho redes II</title>
   </head>
   <body>
-    <h1>Trabalho Rede de Computadores II</h1>
-    <h2>Eduardo Gabriel Kenzo Tanaka</h2>
-    <span>GRR20211791 egkt21@inf.ufpr.br</span>
+    <header>
+      <h1>TCP versus UDP: A Verdade</h1>
+      <h2>Redes de Computadores II</h2>
+      <h2>Universidade Federal do Paraná</h2>
+      <h2>Departamento de Informática</h2>
+      <h2>Bacharelado em Ciência da Computação</h2>
+      <br />
+      <h2>Eduardo Gabriel Kenzo Tanaka - GRR20211791</h2>
+      <h2>Vinícius Yuji Hara - GRR20211763</h2>
 
-    <h3>Relatório</h3>
-    <a href="files/relatorio.txt"></a>
-    <h3>Código fonte</h3>
-    <h3>Logs</h3>
+      <span style="color: red">LEMBRAR DE MUDAR ARQUIVOS PARA .TXT</span>
+    </header>
+
+    <main>
+      <h2>Repositório git</h2>
+      <a href="https://github.com/eduardogkt/redes2" target="_blank"
+        >link do repositório git</a
+      >
+
+      <h2>Relatório</h2>
+      <a href="files/relatorio.md.txt">relatario.md.txt</a>
+
+      <h2>Código Fonte</h2>
+
+      <h2>Logs</h2>
+    </main>
   </body>
 </html>
