--- a/index.html
+++ b/index.html
@@ -21,17 +21,28 @@
     </header>
 
     <main>
-      <h2>Repositório git</h2>
-      <a href="https://github.com/eduardogkt/redes2" target="_blank"
-        >link do repositório git</a
-      >
+      <h2>Repositório</h2>
+      <span>Repositório: </span>
+      <a href="https://github.com/eduardogkt/redes2">link do repositório git</a>
+      <br />
+      <br />
 
       <h2>Relatório</h2>
+      <span>Relatório: </span>
       <a href="files/relatorio.md.txt">relatario.md.txt</a>
+      <br />
+      <br />
 
       <h2>Código Fonte</h2>
+      <span>Código Fonte: </span>
+      <a href="">link</a>
+      <br />
+      <br />
 
       <h2>Logs</h2>
+      <span>Logs: </span>
+      <a href="">link</a>
+      <br />
     </main>
   </body>
 </html>
