mudando arquivos para txt

--- a/index.html
+++ b/index.html
@@ -29,33 +29,35 @@
 
       <h2>Relatório</h2>
       <span>Relatório: </span>
-      <a href="files/relatorio.md.txt">relatario.md.txt</a>
+      <a href="relatorio.md.txt">relatario.md.txt</a>
       <br />
       <br />
 
       <h2>Código Fonte</h2>
       <span>TCP: </span>
-      <a href="./client/client_tcp.py">cliente</a>
-      <a href="./server/client_tcp.py">server</a>
+      <a href="./client/client_tcp.py.txt">cliente</a>
+      <a href="./server/server_tcp.py.txt">server</a>
       <br />
       <span>UDP: </span>
-      <a href="./client/client_udp.py">cliente</a>
-      <a href="./server/client_udp.py">server</a>
+      <a href="./client/client_udp.py.txt">cliente</a>
+      <a href="./server/server_udp.py.txt">server</a>
       <br />
       <br />
 
       <h2>Logs</h2>
+      <span>Diretorios dos arquivos de log: </span>
+      <br />
+      <br />
       <span>Trasferência de dados de memória: </span>
-      <br />
-      <a href="./client/log_memoria/">cliente</a>
-      <a href="./server/log_memoria/">servidor</a>
-      <br />
+      <a href="./client/log_memoria/">dir cliente</a>
+      <a href="./server/log_memoria/">dir servidor</a>
       <br />
       <span>Trasferência de dados de arquivo: </span>
+      <a href="./client/log_arquivo/">dir cliente</a>
+      <a href="./server/log_arquivo/">dir servidor</a>
       <br />
-      <a href="./client/log_arquivo/">cliente</a>
-      <a href="./server/log_arquivo/">servidor</a>
       <br />
+      <a href="./server/log_memoria/1024_udp.log">exemplo de arquivo de log</a>
     </main>
   </body>
 </html>
