atualização legenda grafico

--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
       <p>
         Para testar os protocolos TCP e UDP foram realizado testes feitos para
         comparar a transfêrencia de um arquivo de 80MB e transfêrencia de dados
-        em memória principal de 100MB. Os testes foram feitos com o tamanho de
-        pacotes diversos em bytes: 64k, 10k, 5k, 1500, 1024, 100 e 20. Para cada
-        tamanho de pacote, foi realizado 5 execuções e foi feita uma média entre
-        elas para calcular o tempo de recebimento cliente TCP, tempo de
-        recebimento cliente UDP e a porcentagem de pacotes recebidos em relação
-        ao total do cliente UDP.
+        em memória principal de 1000000 bytes. Os testes foram feitos com o
+        tamanho de pacotes diversos em bytes: 64k, 10k, 5k, 1500, 1024, 100 e
+        20. Para cada tamanho de pacote, foi realizado 5 execuções e foi feita
+        uma média entre elas para calcular o tempo de recebimento cliente TCP,
+        tempo de recebimento cliente UDP e a porcentagem de pacotes recebidos em
+        relação ao total do cliente UDP.
       </p>
 
       <img
